# PROMETH-AI

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  MEMORY.md  arrancar_api.py  coverage.json  iniciar_dashboard.bat  onboarding.bat  pyproject.toml  requirements.txt  sfce.db  sfce.db-shm  sfce.db-wal
dashboard/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docs/: generar_checklist_onboarding.py  zoho-setup.md
mobile/: package-lock.json  package.json
prometh-desktop/: electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
reglas/: aprendizaje.yaml  categorias_gasto.yaml  coherencia_fiscal.yaml  errores_conocidos.yaml  subcuentas_pgc.yaml  subcuentas_tipos.yaml  tipos_retencion.yaml
scripts/: _cobertura_check.py  actualizar_disenos.py  add_dns_dondominio.py  batch_ocr.py  check_fs_usuarios.py  check_imap_maria.py  comparar_ocr_engines.py  conciliar_facturas_gerardo.py  conciliar_gerardo_n43.py  corregir_asientos_ingresos_fv.py  corregir_suplidos_pastorino.py  crear_cuenta_maria.py  crear_cuentas_imap_asesores.py  crear_libros_contables.py  cruzar_gestor_vs_ocr.py  debug2.py  debug3.py  debug4.py  debug5.py  debug_sin_datos.py  enriquecer_config.py  explorar_clinni_fb.py  explorar_formatos.py  explorar_todos.py  fix_cargaexpress.py  fix_cola_columnas.py  fix_columnas_bd.py  fix_iva_aduana.py  fix_partidas_duplicadas_fv.py  generar_modelos_fiscales.py  generar_onboarding_historico.py  generar_pdfs_prueba.py  generar_periodicas.py  (+39 more)
(+1396 files in other folders)
